# Alpha-Nex

./: app.py  main.py  models.py  pyproject.toml  replit.md  routes.py  utils.py
static/css/: dark-theme.css
static/js/: main.js
templates/: base.html  landing.html
templates/admin/: dashboard.html
templates/auth/: login.html  register.html  role_selection.html  verify_email.html
templates/dashboard/: reviewer.html  uploader.html
templates/legal/: content_policy.html  privacy.html  terms.html
templates/rating/: website_rating.html
templates/review/: content_list.html  review_form.html
templates/upload/: agreement.html  upload_form.html
uploads/: .gitkeep
