# Alpha Nex - AI Training Data Platform Configuration
# Python project dependencies and metadata for the Alpha Nex platform
[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Alpha Nex - AI Training Data Collection and Review Platform"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "flask-mail>=0.10.0",
    "sqlalchemy>=2.0.41",
]
